pick available crypto to be bought

--- a/settings.example.json
+++ b/settings.example.json
@@ -1,5 +1,9 @@
 {
     "ToBuy": [
-        { "currency": "...", "min": 0.01 }
+        {
+            "crypto": "xbt",
+            "currency": "eur",
+            "min": 1000
+        }
     ]
 }
